[gd_scene load_steps=12 format=3 uid="uid://bw63rufk8of5w"]

[ext_resource type="Script" uid="uid://skwa24u0pu8" path="res://GUI/MainMenuUI/main_menu.gd" id="1_7vrkn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vccqd"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06t4h"]
bg_color = Color(0.615165, 0.587816, 0.597519, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(0.67347, 0.640095, 0.593169, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k2t6c"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_amrsn"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="Animation" id="Animation_lfg1o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel#Malwares:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5j0qv"]
resource_name = "main_menu_clicked_start_new_game"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel#Malwares:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_v5uxc"]
resource_name = "main_menu_start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel#Malwares:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_41b15"]
_data = {
&"RESET": SubResource("Animation_lfg1o"),
&"main_menu_clicked_start_new_game": SubResource("Animation_5j0qv"),
&"main_menu_start": SubResource("Animation_v5uxc")
}

[node name="MainMenu" type="Control" node_paths=PackedStringArray("animation")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7vrkn")
animation = NodePath("AnimationPlayer")
metadata/_edit_use_anchors_ = true

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vccqd")

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -319.0
offset_top = -90.0
offset_right = 297.0
offset_bottom = 245.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.185981, 0.185981, 0.185981, 1)
theme_override_constants/shadow_offset_y = 30
theme_override_font_sizes/font_size = 63
text = "White Hat Simulator"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Start New Game"

[node name="Button4" type="Button" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Load Game"

[node name="Button2" type="Button" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/hover = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Options
"

[node name="Button3" type="Button" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Quit"

[node name="Panel#Malwares" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 887.0
offset_top = 334.0
offset_right = 1111.0
offset_bottom = 499.0
theme_override_styles/panel = SubResource("StyleBoxFlat_k2t6c")

[node name="Panel_Malwares#VBoxContainer" type="VBoxContainer" parent="Panel#Malwares"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Ransomware" type="Button" parent="Panel#Malwares/Panel_Malwares#VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_amrsn")
text = "Ransomware"

[node name="Fileless" type="Button" parent="Panel#Malwares/Panel_Malwares#VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_amrsn")
text = "Fileless Malware"

[node name="Phishing" type="Button" parent="Panel#Malwares/Panel_Malwares#VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_amrsn")
text = "Phishing"

[node name="dos" type="Button" parent="Panel#Malwares/Panel_Malwares#VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_amrsn")
text = "Denial of Service"

[node name="Bruteforce" type="Button" parent="Panel#Malwares/Panel_Malwares#VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_amrsn")
text = "Bruteforce"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_41b15")
}

[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/Button2" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/Button3" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Panel#Malwares/Panel_Malwares#VBoxContainer/Fileless" to="." method="_on_fileless_pressed"]
[connection signal="pressed" from="Panel#Malwares/Panel_Malwares#VBoxContainer/Phishing" to="." method="_on_phishing_pressed"]
[connection signal="pressed" from="Panel#Malwares/Panel_Malwares#VBoxContainer/dos" to="." method="_on_dos_pressed"]
